--- a/Simula/MainWindow.xaml
+++ b/Simula/MainWindow.xaml
@@ -9,7 +9,7 @@
         xmlns:editor ="http://xornent.org/simula/editor"
         mc:Ignorable="d" UseLayoutRounding="True"
         Icon="pack://siteoforigin:,,,/app.icon.ico"
-        FontFamily="{StaticResource default}"
+        FontFamily="{StaticResource default}" Margin="0"
         Title="Simula" Height="690" Width="1050" MinWidth="895" MinHeight="570" WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
@@ -300,7 +300,7 @@
                                     </StackPanel>
                                 </Button.Content>
                             </Button>
-                            <Button Margin="0 4 10 4">
+                            <Button Margin="0 4 10 4" Click="Event_User">
                                 <Button.Content>
                                     <StackPanel Orientation="Horizontal" Margin="5 0 5 0">
                                         <Image Width="16" Height="16" Source="pack://siteoforigin:,,,/resources/icons/profile.png"/>
@@ -500,8 +500,11 @@
                         <ColumnDefinition Width="300"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
+                    <!-- <Grid.Effect>
+                        <BlurEffect x:Name="GlobalBlur" Radius="0"/>
+                    </Grid.Effect> -->
                     <DockPanel Grid.Column="0">
-                        <Border BorderThickness="0 0 1 0" BorderBrush="#cccccc">
+                        <Border BorderThickness="0 0 0 0" BorderBrush="#cccccc">
                             <TabControl TabStripPlacement="Bottom" Grid.Column="0" MaxWidth="315">
                                 <TabControl.Items>
                                     <TabItem Header="工作区资源浏览器">
@@ -571,7 +574,7 @@
                                     </TabItem>
                                     <TabItem Header="版本控制">
                                         <Grid>
-                                            <DockPanel x:Name="panelGit" Visibility="Hidden">
+                                            <DockPanel x:Name="panelGit" Visibility="Visible">
                                                 <Expander DockPanel.Dock="Top" Header="已作出的更改" IsExpanded="True">
                                                     <StackPanel Orientation="Vertical">
                                                         <Grid Height="139" Background="#f8f8f8" Margin="0,0,0,0">
@@ -582,8 +585,8 @@
                                                                 </DockPanel>
                                                                 <DockPanel Margin="0 0 0 0">
                                                                     <Border BorderThickness="1" BorderBrush="#eeeeee" CornerRadius="3" Margin="1 1 1 3" Background="White">
-                                                                        <editor:TextEditor Background="#FFFFFF" FontWeight="Regular" FontFamily="Consolas, Simsun" FontSize="11" Language="Markdown" Foreground="#666666"
-                                                                                   ShowLineNumbers="True" LineNumbersForeground="#bbbbbb" WordWrap="True" Height="68" Margin="3" x:Name="gitMessage" Text=" Write your comment message here ..."/>
+                                                                        <editor:TextEditor x:Name="txtGitCommitMsg" Background="#FFFFFF" FontWeight="Regular" FontFamily="Consolas, Simsun" FontSize="11" Language="Markdown" Foreground="#666666"
+                                                                                   ShowLineNumbers="True" LineNumbersForeground="#bbbbbb" WordWrap="True" Height="68" Margin="3" Text=" Write your comment message here ..."/>
                                                                     </Border>
                                                                 </DockPanel>
                                                                 <Grid DockPanel.Dock="Top" Height="37" Background="#f8f8f8">
@@ -600,11 +603,11 @@
                                                                             </Button>
                                                                         </StackPanel>
                                                                         <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
-                                                                            <Button Width="32" FontSize="13" Margin="0 2 5 10">
-                                                                                <Image IsHitTestVisible="False" Source="pack://siteoforigin:,,,/resources/icons/archieve-remove.png" Width="16" Height="16"/>
-                                                                            </Button>
-                                                                            <Button Width="32" FontSize="13" Margin="0 2 0 10">
+                                                                            <Button Width="32" FontSize="13" Margin="0 2 5 10" Click="Event_GitStashAll">
                                                                                 <Image IsHitTestVisible="False" Source="pack://siteoforigin:,,,/resources/icons/archieve.png" Width="16" Height="16"/>
+                                                                            </Button>
+                                                                            <Button Width="32" FontSize="13" Margin="0 2 0 10" Click="Event_GitCommit">
+                                                                                <Image IsHitTestVisible="False" Source="pack://siteoforigin:,,,/resources/icons/asset-publish.png" Width="16" Height="16"/>
                                                                             </Button>
                                                                         </StackPanel>
                                                                         <Grid/>
@@ -614,9 +617,19 @@
                                                         </Grid>
                                                         <TreeView Height="175" TextElement.FontWeight="Regular" TextElement.FontFamily="{StaticResource default}">
                                                             <TreeView.Items>
-                                                                <ui:IconTreeNode Header="更改" Icon="pack://siteoforigin:,,,/resources/icons/data.png">
+                                                                <ui:IconTreeNode x:Name="treeItemChanges" Header="更改" Icon="pack://siteoforigin:,,,/resources/icons/data.png">
+                                                                    <ui:IconTreeNode.ContextMenu>
+                                                                        <ContextMenu>
+                                                                            <ContextMenu.Items>
+                                                                                <MenuItem Header="暂存所有更改" Click="Event_GitStashAll"/>
+                                                                                <MenuItem Header="暂存所有更改并推送" Click="Event_GitStashAllAndCommit"/>
+                                                                                <Separator/>
+                                                                                <MenuItem Header="清理所有未跟踪的文件" Click="Event_GitRemoveUntracked"/>
+                                                                            </ContextMenu.Items>
+                                                                        </ContextMenu>
+                                                                    </ui:IconTreeNode.ContextMenu>
                                                                 </ui:IconTreeNode>
-                                                                <ui:IconTreeNode Header="已暂存的更改" Icon="pack://siteoforigin:,,,/resources/icons/data-check.png"/>
+                                                                <ui:IconTreeNode x:Name="treeItemStacked" Header="已暂存的更改" Icon="pack://siteoforigin:,,,/resources/icons/data-check.png"/>
                                                             </TreeView.Items>
                                                         </TreeView>
                                                     </StackPanel>
@@ -658,7 +671,7 @@
                                                                     </ui:IconTreeNode>
                                                                     <ui:IconTreeNode x:Name="treeItemGitLocal" Header="本地提交" Icon="pack://siteoforigin:,,,/resources/icons/archieve.png"/>
                                                                     <ui:IconTreeNode x:Name="treeItemGitRemote" Header="远程分支上的提交" Icon="pack://siteoforigin:,,,/resources/icons/upload.png"/>
-                                                                    <ui:IconTreeNode x:Name="treeItemGitTag" Header="远程分支上的提交" Icon="pack://siteoforigin:,,,/resources/icons/labels.png"/>
+                                                                    <ui:IconTreeNode x:Name="treeItemGitTag" Header="标签和发布版本" Icon="pack://siteoforigin:,,,/resources/icons/labels.png"/>
                                                                     <ui:IconTreeNode x:Name="treeItemGitAuthors" Header="已认证的提交作者" Icon="pack://siteoforigin:,,,/resources/icons/profile.png"/>
                                                                 </TreeView.Items>
                                                             </TreeView>
@@ -666,7 +679,7 @@
                                                     </DockPanel>
                                                 </Expander>
                                             </DockPanel>
-                                            <DockPanel x:Name="panelInitGit" Visibility="Visible">
+                                            <DockPanel x:Name="panelInitGit" Visibility="Hidden">
                                                 <Expander x:Name="expInitGit" Header="初始化源代码管理" IsExpanded="True">
                                                     <StackPanel Orientation="Vertical" Margin="5">
                                                         <Label Content="当前工作目录下没有可用的 Git 储存库"/>
@@ -945,6 +958,7 @@
             </DockPanel>
 
         </Grid>
+
     </Grid>
 
     <WindowChrome.WindowChrome>
