--- a/Simula/UI/Styles.xaml
+++ b/Simula/UI/Styles.xaml
@@ -18,17 +18,23 @@
     <Style TargetType="Button">
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="{StaticResource buttonFace}"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Name="Border" BorderThickness="0.8" CornerRadius="4" BorderBrush="#DADADA" Background="{StaticResource buttonFace}" TextElement.Foreground="Black">
-                        <Grid Margin="0 0 0 0">
-                            <ContentPresenter Margin="{TemplateBinding Padding}" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                            </ContentPresenter>
-                        </Grid>
-                        <Border.Effect>
-                            <DropShadowEffect BlurRadius="2" ShadowDepth="0.5" Direction="-80" Opacity="0.2"/>
-                        </Border.Effect>
+                    <Border x:Name="BorderFocus" BorderThickness ="0" Margin="0" CornerRadius="6" >
+                        <Border.BorderBrush>
+                            <SolidColorBrush Color="{x:Static SystemColors.HighlightColor}" Opacity="0.3"/>
+                        </Border.BorderBrush>
+                        <Border Name="Border" BorderThickness="0.8" CornerRadius="4" BorderBrush="#DADADA" Background="{StaticResource buttonFace}" TextElement.Foreground="Black">
+                            <Grid Margin="0 0 0 0">
+                                <ContentPresenter Margin="{TemplateBinding Padding}" HorizontalAlignment="Center" VerticalAlignment="Center" >
+                                </ContentPresenter>
+                            </Grid>
+                            <Border.Effect>
+                                <DropShadowEffect BlurRadius="2" ShadowDepth="0.5" Direction="-80" Opacity="0.2"/>
+                            </Border.Effect>
+                        </Border>
                     </Border>
                     <ControlTemplate.Triggers>
                         <EventTrigger RoutedEvent="MouseEnter">
@@ -55,6 +61,10 @@
                             <Setter TargetName="Border" Property="Background" Value="LightGray"></Setter>
                             <Setter TargetName="Border" Property="TextElement.Foreground" Value="DarkGray"/>
                         </Trigger>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter Property="Margin" TargetName="BorderFocus" Value="-3"/>
+                            <Setter Property="BorderThickness" TargetName="BorderFocus" Value="3"/>
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
@@ -65,6 +75,124 @@
                 <Setter Property="Background" Value="Gray"/>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style TargetType="{x:Type TextBox}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="KeyboardNavigation.TabNavigation" Value="None" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="MinWidth" Value="120" />
+        <Setter Property="MinHeight" Value="20" />
+        <Setter Property="AllowDrop" Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBoxBase}">
+                    <Border x:Name="BorderFocus" BorderThickness ="0" Margin="0" CornerRadius="6" >
+                        <Border.BorderBrush>
+                            <SolidColorBrush Color="{x:Static SystemColors.HighlightColor}" Opacity="0.3"/>
+                        </Border.BorderBrush>
+                        <Border Name="Border" CornerRadius="4" Padding="2" BorderThickness="1">
+                            <Border.Background>
+                                <SolidColorBrush Color="White" />
+                            </Border.Background>
+                            <Border.BorderBrush>
+                                <SolidColorBrush Color="#aaaaaa" />
+                            </Border.BorderBrush>
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="Disabled">
+                                        <Storyboard>
+                                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+                                                <EasingColorKeyFrame KeyTime="0" Value="#dddddd" />
+                                            </ColorAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="ReadOnly">
+                                        <Storyboard>
+                                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+                                                <EasingColorKeyFrame KeyTime="0" Value="#bbbbbb" />
+                                            </ColorAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="MouseOver" />
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <ScrollViewer Margin="0" x:Name="PART_ContentHost" />
+                        </Border>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter Property="Margin" TargetName="BorderFocus" Value="-3"/>
+                            <Setter Property="BorderThickness" TargetName="BorderFocus" Value="3"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type PasswordBox}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="KeyboardNavigation.TabNavigation" Value="None" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="MinWidth" Value="120" />
+        <Setter Property="MinHeight" Value="20" />
+        <Setter Property="AllowDrop" Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type PasswordBox}">
+                    <Border x:Name="BorderFocus" BorderThickness ="0" Margin="0" CornerRadius="6" >
+                        <Border.BorderBrush>
+                            <SolidColorBrush Color="{x:Static SystemColors.HighlightColor}" Opacity="0.3"/>
+                        </Border.BorderBrush>
+                        <Border Name="Border" CornerRadius="4" Padding="2" BorderThickness="1">
+                            <Border.Background>
+                                <SolidColorBrush Color="White" />
+                            </Border.Background>
+                            <Border.BorderBrush>
+                                <SolidColorBrush Color="#aaaaaa" />
+                            </Border.BorderBrush>
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="Disabled">
+                                        <Storyboard>
+                                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+                                                <EasingColorKeyFrame KeyTime="0" Value="#dddddd" />
+                                            </ColorAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="ReadOnly">
+                                        <Storyboard>
+                                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+                                                <EasingColorKeyFrame KeyTime="0" Value="#bbbbbb" />
+                                            </ColorAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="MouseOver" />
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <ScrollViewer Margin="0" x:Name="PART_ContentHost" />
+                        </Border>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter Property="Margin" TargetName="BorderFocus" Value="-3"/>
+                            <Setter Property="BorderThickness" TargetName="BorderFocus" Value="3"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
@@ -883,7 +1011,48 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="{x:Type ContextMenu}" TargetType="{x:Type ContextMenu}">
+        <Setter Property="OverridesDefaultStyle"
+          Value="True" />
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontFamily" Value="{StaticResource default}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ContextMenu}">
+                    <Popup x:Name="Popup"
+                       Placement="MousePoint"
+                       HorizontalOffset="-4"
+             IsOpen="{TemplateBinding IsOpen}"
+             AllowsTransparency="True"
+             Focusable="False"
+             PopupAnimation="Fade">
+                        <Grid>
+                            
+                            <Border x:Name="SubmenuBorder"
+                SnapsToDevicePixels="True"
+                BorderThickness="1"
+                Background="White" BorderBrush="LightGray" CornerRadius="5" Margin="2, 0, 20, 20">
+                                <Border.Effect>
+                                    <DropShadowEffect ShadowDepth="2" BlurRadius="20" Opacity="0.13"/>
+                                </Border.Effect>
+                                <Border BorderBrush="White" BorderThickness="0 4 0 4" CornerRadius="5">
+                                    <Grid>
+                                    <ScrollViewer CanContentScroll="True"
+                        Style="{StaticResource MenuScrollViewer}">
+                                        <StackPanel IsItemsHost="True"
+                        KeyboardNavigation.DirectionalNavigation="Cycle" />
+                                    </ScrollViewer>
+                                </Grid>
+                            </Border>
+                            </Border>
+                        </Grid>
 
+                    </Popup>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     <Style  TargetType="{x:Type TabControl}">
         <Setter Property="OverridesDefaultStyle"
           Value="True" />
@@ -1057,8 +1226,9 @@
     <Style x:Key="{x:Type TreeView}"  TargetType="TreeView">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="SnapsToDevicePixels"  Value="True" />
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
+        <Setter Property="ScrollViewer.MaxWidth" Value="300"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="TreeView">
@@ -1318,6 +1488,107 @@
                             </MultiTrigger.Conditions>
                             <Setter TargetName="PART_Header" Property="MinHeight" Value="19" />
                         </MultiTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="{x:Type CheckBox}"
+       TargetType="{x:Type CheckBox}">
+        <Setter Property="SnapsToDevicePixels" Value="true" />
+        <Setter Property="OverridesDefaultStyle" Value="true" />
+        <Setter Property="FocusVisualStyle" Value="{DynamicResource CheckBoxFocusVisual}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type CheckBox}">
+                        <BulletDecorator Background="Transparent">
+                            <BulletDecorator.Bullet>
+                                <Border x:Name="Border" Width="15" Height="15"
+                                CornerRadius="3" BorderThickness="2" BorderBrush="Gray">
+                                    <Border.Background>
+                                        <SolidColorBrush Color="Gray" Opacity="0"/>
+                                    </Border.Background>
+                                    <Grid>
+                                        <Path Visibility="Collapsed"
+                      Width="11"
+                      Height="11"
+                      x:Name="CheckMark"
+                      SnapsToDevicePixels="False"
+                      StrokeThickness="2"
+                      Data="M 1 5 L 5 9 L 9 1">
+                                            <Path.Stroke>
+                                                <SolidColorBrush Color="White" />
+                                            </Path.Stroke>
+                                        </Path>
+                                        <Path Visibility="Collapsed"
+                      Width="7"
+                      Height="7"
+                      x:Name="InderminateMark"
+                      SnapsToDevicePixels="False"
+                      StrokeThickness="2"
+                      Data="M 0 7 L 7 0">
+                                            <Path.Stroke>
+                                                <SolidColorBrush Color="White" />
+                                            </Path.Stroke>
+                                        </Path>
+                                    </Grid>
+                                </Border>
+                            </BulletDecorator.Bullet>
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="MouseOver">
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Border.BorderBrush).Opacity"
+                                                         From="1" To="0.8" Duration="0:0:0.1"/>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Pressed">
+                                        <Storyboard>
+                                            <DoubleAnimation Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Border.Background).Opacity"
+                                                         From="1" To="1" Duration="0:0:0.1"/>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Disabled" />
+                                </VisualStateGroup>
+                                <VisualStateGroup x:Name="CheckStates">
+                                    <VisualState x:Name="Checked">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)"
+                                                 Storyboard.TargetName="CheckMark">
+                                                <DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{x:Static Visibility.Visible}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <DoubleAnimation Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Border.Background).Opacity"
+                                                         From="1" To="1" Duration="0:0:0.1"/>
+                                        </Storyboard>
+                                    </VisualState>
+                                    <VisualState x:Name="Unchecked" />
+                                    <VisualState x:Name="Indeterminate">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)"
+                                                 Storyboard.TargetName="InderminateMark">
+                                                <DiscreteObjectKeyFrame KeyTime="0"
+                                            Value="{x:Static Visibility.Visible}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <DoubleAnimation Storyboard.TargetName="Border"
+                                                Storyboard.TargetProperty="(Border.Background).Opacity"
+                                                         From="1" To="1" Duration="0:0:0.1"/>
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <ContentPresenter Margin="4,0,0,0"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Left"
+                            RecognizesAccessKey="True" />
+
+                        </BulletDecorator>
+                        <ControlTemplate.Triggers>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
